syntax = "proto3";

package protobuf;
option go_package = "/pb";
import "google/api/annotations.proto";
import "google/type/date.proto";

service AuthService{
  rpc GetUser(GetUserRequest) returns (GetUserResponse){
    option (google.api.http).get = "/api/v1/users/get";
  };
  rpc AddUser(AddUserRequest) returns (AddUserResponse){
    option (google.api.http) = {
      post: "/api/v1/users/add";
      body: "*";
    };
  };
}

message GetUserRequest{
  int64 id = 1;
}
message GetUserResponse{
  User user = 1;
}
message AddUserRequest{
  string Email = 1;
  string Name = 2;
  string Password = 3;
  bool Notifications=4;
  google.type.Date BirthInfo = 5;
}
message AddUserResponse{
  bool Status = 1;
}
message User{
  string Email = 1;
  string Sign = 2;
  string Name = 3;
  string Password = 4;
  uint64 ID = 5;
  google.type.Date BirthInfo = 6;
}

